# gmdbuilder

./: .gitignore  Contributing.md  README.md  TODO.md  example_usage.py  gmdkit_example.py  package-lock.json  package.json  pyproject.toml  test_basic.py  test_gmdkit_only.py  trigger-fn.md
.github/workflows/: ci.yml  docs.yml  release.yml
build_tools/: gen_enum_mappings.py  gen_id_typeddict_stubs.py  gen_tsv_obj_mappings.py  gen_typed_obj_classes.py  id_classes.json  typemap.tsv
docs/: classdata.json  classes.md  colors.md  context.md  getting-started.md  index.md  introduction.md  new-ids.md  object-types.md  objects.md  propdata.json  property.md  reference.md  setting.md  wrappers.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: ClassSearch.vue  custom.css
docs/scripts/: gen_classdata.py  gen_propdata.py
examples/: gmdkit_setup_test.py
src/gmdbuilder/: KIT_INTERFACE.md  __init__.py  color.py  context.py  core.py  core.pyi  fields.py  futils.py  id.py  kit_interface.py  level.py  object.py  object_typeddict.py  object_types.py  templates.py  trigger_fn.py  validation.py
src/gmdbuilder/classes/: __init__.py  color.py  control.py  follow.py  item.py  object.py  transform.py  trigger.py
src/gmdbuilder/internal_mappings/: color_id.py  color_prop.py  lvl_prop.py  obj_enum.py  obj_id.py  obj_prop.py  smart_template.py
src/gmdbuilder/mappings/: color_id.py  color_prop.py  lvl_prop.py  obj_enum.py  obj_id.py  obj_prop.py  smart_template.py
tests/: test_roundtrip.py
tests/levels/: 3Depth.gmd  skeletal.gmd  touhou_scs.gmd
(+6 files in other folders)
